# unstable-invasion

./: 3Dphase.cc  3Dtest.cc  CMakeLists.txt  README.md
2D/Flat/: README.md
2D/Flat/Bystander/: CMakeLists.txt  README.md
2D/Flat/Two-Species/: CMakeLists.txt  DKmu.cc  DKphase.cc  README.md  diffusion.cc  mu.cc  phase.cc
2D/Radial/: README.md
3D/Flat/: README.md
3D/Flat/Bystander/: CMakeLists.txt  README.md  a.exp  parallel_GPU.cu  parallel_cud.exea  parallel_cuda.exp  phase.cc
3D/Flat/Bystander/RandomSequential/: CMakeLists.txt  ranseq.cc  ranseq_nompi  ranseq_nompi.cc  ranseq_old.cc
3D/Flat/Bystander/diffusion_out/: diffusion_run0  diffusion_run1  diffusion_run2  diffusion_run3
3D/Flat/Two-Species/: 3DDK.cc  CMakeLists.txt  README.md  phase.cc
3D/Radial/: README.md
4D/Flat/Bystander/: README.md  parallel_GPU.cu  parallel_cuda.exp  parallel_cuda.lib  simulation.cc
4D/Flat/Bystander/RandomSequential/: ranseq.cc  ranseq_nompi  ranseq_nompi.cc
4D/Flat/Bystander/RandomSequential/ranseq_nompi.dSYM/Contents/: Info.plist
4D/Flat/Bystander/RandomSequential/ranseq_nompi.dSYM/Contents/Resources/DWARF/: ranseq_nompi
4D/Two-Species/: simulation.cc
